--- a/scripts/build
+++ b/scripts/build
@@ -26,7 +26,7 @@ selectjar()
 
 build()
 {
-    mvn ${MAVEN_ARGS} ${RELEASE_ARGS} ${MAVEN_TARGET:-install}
+    mvn -DskipTests ${MAVEN_ARGS} ${RELEASE_ARGS} ${MAVEN_TARGET:-install}
     mkdir -p dist/artifacts
 
     local target=dist/artifacts/cattle.jar
